Drawing now working Fixed the time to use System.nanoseconds
ToDo: fix how NearbyConnectorFromFile loads file, so that MainActivity shows live updates of the looped file

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,21 +11,54 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/outputLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="500dp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="Hello World!" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/ServerButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:onClick="buttonConnectToServer"
-            android:text="Button" />
+            <com.example.positioningapp.Core.CanvasView
+                android:id="@+id/CanvasView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/outputLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="168dp"
+                android:layout_marginEnd="167dp"
+                android:layout_weight="0"
+                android:gravity="center"
+                android:text="Hello World!"
+                app:layout_constraintBottom_toTopOf="@+id/ServerButton"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/CanvasView" />
+
+            <Button
+                android:id="@+id/ServerButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="162dp"
+                android:layout_marginEnd="162dp"
+                android:layout_weight="0"
+                android:onClick="buttonConnectToServer"
+                android:text="Button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/outputLabel" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
