PAN is laggy (Need to pan far and fast to actually work) Zoom works fine ToDO: Snap to first point when connecting to a setup Fast forward/backward, live

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Core.MainActivity">
+    <!--
+    <com.example.positioningapp.GUI.OLD.Panel
+        android:id="@+id/SurfaceView01"
+        android:layout_width="wrap_content"
 
-    <androidx.constraintlayout.widget.MotiontLayout
-        android:id="@+id/DataLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </androidx.constraintlayout.widget.MotiontLayout>
-
-    <LinearLayout
-        android:id="@+id/HUDLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:maxHeight="40dip"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"></com.example.positioningapp.GUI.OLD.Panel>
+    -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
+
+
+
+
